--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
   "description": "Get every background-color from the current tab.",
 
   "browser_action": {
-    "default_icon": "icon19.png"
+    "default_icon": "icon19.png",
+    "default_popup": "popup.html",
+    "default_title": "New Extension"
   },
 
   "background": {
